# python_grpc_example

./: .gitignore  LICENSE  README.md  pyproject.toml
grpc_client/: README.md  requirements.txt
grpc_client/example_client/: __main__.py
grpc_client/example_client/proto/: example_pb2.py  example_pb2_grpc.py
grpc_server/: README.md  requirements.txt
grpc_server/example_server/: __main__.py  _arg_parser.py  _starter.py
grpc_server/example_server/proto/: example.proto  example_pb2.py  example_pb2.pyi  example_pb2_grpc.py
grpc_server/example_server/server/: __init__.py  _server.py
grpc_server/example_server/service/: __init__.py  _client.py  _service.py
